# flipperzero-hello-rust

./: Cargo.toml
src/: lib.rs
