[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
crate-type = ["staticlib"]
bench = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flipperzero = { version = "0.2.0-alpha", path = "../../../flipperzero-rs/crates/flipperzero" }
flipperzero-sys = { version = "0.2.0-alpha", path = "../../../flipperzero-rs/crates/sys" }
flipperzero-rt = { version = "0.2.0-alpha", path = "../../../flipperzero-rs/crates/rt" }

[profile.release]
opt-level = "z"
panic = "abort"
